[package]
name = "lua-decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
byteorder = "1.5"
clap = { version = "4.5.4", features = ["derive"] }
